refactor(auth): 重构SSO登录服务和网关鉴权机制
- 移除refresh token相关功能和接口方法
- 优化登录服务实现，简化JWT和session管理逻辑
- 更新二维码登录流程，改进状态管理和用户验证
- 重构网关过滤器，采用双层Redis验证机制
- 优化会话TTL管理，移除过期配置项
- 简化Cookie管理和安全设置
- 更新导入包和常量定义方式
- 改进错误处理和日志记录机制